--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ leptos_router = { version = "0.2", default-features = false }
 log = "0.4"
 simple_logger = "4"
 wasm-bindgen = "0.2"
+getrandom = { version = "0.2", features = ["js"] }
 
 rand = "0.8.5"
 
