--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,7 @@ actix-web = { version = "4", optional = true, features = ["macros"] }
 console_error_panic_hook = "0.1"
 console_log = "1.0"
 cfg-if = "1"
-leptos = { version = "0.3", default-features = false, features = [
-  "serde",
-] }
+leptos = { version = "0.3", default-features = false, features = ["serde"] }
 leptos_meta = { version = "0.3", default-features = false }
 leptos_actix = { version = "0.3", optional = true }
 leptos_router = { version = "0.3", default-features = false }
@@ -24,13 +22,23 @@ wasm-bindgen = "0.2"
 getrandom = { version = "0.2", features = ["js"] }
 
 rand = "0.8.5"
+sqlx = { version = "0.6.3", features = [
+  "sqlite",
+  "runtime-tokio-rustls",
+], optional = true }
+dotenvy = "0.15.7"
+anyhow = "1.0.71"
+dotenvy_macro = "0.15.7"
+serde = { version = "1.0.163", features = ["derive"] }
 
 [features]
+default = ["ssr"]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
 ssr = [
   "dep:actix-files",
   "dep:actix-web",
   "dep:leptos_actix",
+  "dep:sqlx",
   "leptos/ssr",
   "leptos_meta/ssr",
   "leptos_router/ssr",
